style correction of paths

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -44,7 +44,7 @@ button {
     padding: 0;
     border-radius: 50%;
     border: none; 
-    background-image: url('/media/burger-menu.png');
+    background-image: url('media/burger-menu.png');
     background-color: transparent;
     background-position: center center;
     background-size: contain 
@@ -55,7 +55,7 @@ button {
     padding: 0;
     border-radius: 50%;
     border: none; 
-    background-image: url('/media/close.png');
+    background-image: url('media/close.png');
     background-color: transparent;
     background-position: center center;
     background-size: contain;
@@ -181,7 +181,7 @@ button {
                     max-width: 100%;
                 }
                 .split__right {
-                    background: url('/media/06-ConvertImage.jpg');
+                    background: url('media/06-ConvertImage.jpg');
                     background-size: cover;
                     pointer-events: none;
                     position: absolute;
