--- a/style/_base.scss
+++ b/style/_base.scss
@@ -44,7 +44,7 @@ button {
     padding: 0;
     border-radius: 50%;
     border: none; 
-    background-image: url('media/burger-menu.png');
+    background-image: url('/media/burger-menu.png');
     background-color: transparent;
     background-position: center center;
     background-size: contain 
@@ -55,7 +55,7 @@ button {
     padding: 0;
     border-radius: 50%;
     border: none; 
-    background-image: url('media/close.png');
+    background-image: url('/media/close.png');
     background-color: transparent;
     background-position: center center;
     background-size: contain;
