--- a/style/_theme-1.scss
+++ b/style/_theme-1.scss
@@ -106,6 +106,7 @@ h3 {
 
 .close {
     border: 2px solid $carbone;
+    background-image: url('media/close.png');
     background-color: $yellow;
     &:hover, &:focus {
         background-color: $red;
@@ -278,7 +279,7 @@ nav {
                     .git {
                         min-height: 80px;
                         height: 100%;
-                        background-image: url('/media/github-logo_icon-icons.com_73546.webp');
+                        background-image: url('media/github-logo_icon-icons.com_73546.webp');
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: 80%;
