--- a/style/_theme-1.scss
+++ b/style/_theme-1.scss
@@ -106,7 +106,6 @@ h3 {
 
 .close {
     border: 2px solid $carbone;
-    background-image: url('media/close.png');
     background-color: $yellow;
     &:hover, &:focus {
         background-color: $red;
@@ -279,7 +278,7 @@ nav {
                     .git {
                         min-height: 80px;
                         height: 100%;
-                        background-image: url('media/github-logo_icon-icons.com_73546.webp');
+                        background-image: url("media/github-logo_icon-icons.com_73546.webp");
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: 80%;
@@ -293,7 +292,7 @@ nav {
                         }
                     }
                     .nogit {
-                        background-image: url('/media/black_cat_icon_177458.webp');
+                        background-image: url("/media/black_cat_icon_177458.webp");
                         pointer-events: none; 
                     }
                 }
