--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,7 @@ button {
   padding: 0;
   border-radius: 50%;
   border: none;
-  background-image: url("/media/burger-menu.png");
+  background-image: url("media/burger-menu.png");
   background-color: transparent;
   background-position: center center;
   background-size: contain;
@@ -78,7 +78,7 @@ button {
   padding: 0;
   border-radius: 50%;
   border: none;
-  background-image: url("/media/close.png");
+  background-image: url("media/close.png");
   background-color: transparent;
   background-position: center center;
   background-size: contain;
@@ -656,7 +656,7 @@ nav .active {
   transition: all 0.5s ease-in-out;
 }
 .projects .deployed .inner .text-container .action .nogit {
-  background-image: url("/media/black_cat_icon_177458.webp");
+  background-image: url("media/black_cat_icon_177458.webp");
   pointer-events: none;
 }
 
