--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -1,6 +1,6 @@
 
 .gallery-content {
-    cursor: url('/media/pink.png'), pointer;
+    cursor: url('media/pink.png'), pointer;
     height: 75vh;
     width: 100vw;
     background-color: #E8AA00;
