--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -65,7 +65,7 @@
             left: 0;
             height: 90px;
             width: 50px;
-            background: url("/media/telecharger (1).png") center center no-repeat;
+            background: url("media/telecharger (1).png") center center no-repeat;
             background-size: contain;
             filter: invert(1);
         }
