--- a/style/_herogenerator.scss
+++ b/style/_herogenerator.scss
@@ -51,7 +51,7 @@
             position: absolute;
             height: 100px;
             width: 100%;
-            background: url("/media/640px-VeveAyizan.svg.png") center center no-repeat;
+            background: url("media/640px-VeveAyizan.svg.png") center center no-repeat;
             background-size: contain;
             filter: invert(1);
             top: 0;
